--- a/package.json
+++ b/package.json
@@ -2,21 +2,30 @@
   "name": "ns_assesment_api",
   "version": "1.0.0",
   "description": "Assessment Full Stack dev NS - Arjen Klaverstijn 2025",
-  "main": "./build/app.js",
+  "main": "index.js",
   "type": "module",
+  "types": "index.d.ts",
   "scripts": {
-    "dev": "npx tsx --watch",
-    "build": "npx tsc",
+    "build": "tsc",
+    "dev": "npx tsx --watch ./src/index.ts",
     "test": "vitest",
+    "start": "node ./build/index.js",
+    "gen-types": "npx openapi-typescript",
     "coverage": "vitest run --coverage"
   },
   "author": "Arjen Klaverstijn",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "dependencies": {
-    "fastify": "^5.2.1"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "openapi-ts-router": "^0.2.1",
+    "validation-adapters": "^0.0.18",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.13.1",
+    "openapi-fetch": "^0.13.4",
     "typescript": "^5.7.3",
     "vitest": "^3.0.5"
   }
