stop building on errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     "composite": true,
     "skipLibCheck": true,
     "noEmitHelpers": false,
+    "noEmitOnError": true,
 
     "outDir": "build",
     "rootDir": "src",
